--- a/UnADM/universidadPOO3/La Hamburguesa/src/cliente/Cliente.form
+++ b/UnADM/universidadPOO3/La Hamburguesa/src/cliente/Cliente.form
@@ -131,8 +131,8 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-              <Component id="jScrollPane3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
+              <Component id="jScrollPane3" pref="113" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
