--- a/UnADM/universidadPOO3/La Hamburguesa/src/servidor/Servidor.form
+++ b/UnADM/universidadPOO3/La Hamburguesa/src/servidor/Servidor.form
@@ -147,7 +147,8 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Jorge Negrete Sanchez"/>
+        <Property name="horizontalAlignment" type="int" value="0"/>
+        <Property name="text" type="java.lang.String" value="Pedro Infante"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
@@ -164,6 +165,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="30 Minutos"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
