Cambio de nombre del archivo y asignación del menú principal

--- a/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/src/interfaces/MenuPrincipal.form
+++ b/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/src/interfaces/MenuPrincipal.form
@@ -6,7 +6,7 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Asignar Trabajo"/>
+            <Property name="text" type="java.lang.String" value="Habitaci&#xf3;n"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jIemAsigar">
@@ -21,16 +21,13 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jItemReporte">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Reportes trabajo"/>
+            <Property name="text" type="java.lang.String" value="Personal"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ir"/>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
-              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
